feat(SIRF): Save results via SIRF builtin Nifti output class
Didn't know about the SIRF builtin solution yet but the manual
wrangling with the data caused incorrect MNI normalization downstream.

The problem was likely due to some incorrect settings in the resulting headers,
however, due to the builtin class we do not have to care about it and
it works now.

Because the class only supports single frames and no 4D images,
we need to additionally merge all result files into one.

--- a/SIRF-STIR/Dockerfile
+++ b/SIRF-STIR/Dockerfile
@@ -13,7 +13,8 @@ ENV GIT_COMMIT_SHORT_SHA=$GIT_COMMIT_SHORT_SHA
 
 WORKDIR /home/jovyan
 RUN fix-permissions "${CONDA_DIR}" /home/${NB_USER}
-RUN apt install -y cmake git libgoogle-glog-dev libinsighttoolkit5-dev libboost-all-dev
+RUN apt-get update
+RUN apt-get install -y cmake git libgoogle-glog-dev libinsighttoolkit5-dev libboost-all-dev
 
 RUN git clone https://github.com/UCL/pet-rd-tools.git
 WORKDIR /home/jovyan/pet-rd-tools
